test_regress/t/t_tagged_nonvoid_noexpr_bad.out
%Error: t/t_tagged_nonvoid_noexpr_bad.v:19:11: Non-void tagged union member 'Valid' requires an expression
                                             : ... note: In instance 't'
   19 |       x = tagged Valid;
      |           ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
